Remove userIds from schema because they are not needed. Add abandonment/cancellation reason to the checkout abandoned schema
