# Producer_Web/src/main/java/mk/ukim/finki/thesis/producer/dtos/OrderCancellationDTO.java
@@ -1,12 +1,13 @@
 package mk.ukim.finki.thesis.producer.dtos;
 
 import lombok.Getter;
+import mk.ukim.finki.thesis.common.enums.CancellationReason;
 
 import java.util.List;
 
 @Getter
 public class OrderCancellationDTO {
   Long cartId;
-  Long userId;
-  List<Long> productIds;
+  List<ProductDTO> products;
+  CancellationReason reason;
 }
